<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:text="@string/lab_btnobjectif"
            android:textSize="25dp"
            android:gravity="center"
            android:background="@drawable/img_header_page"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_green_bookmark_star"
                android:text="@string/lab_objectivos1"
                android:textSize="18sp"
                android:background="@drawable/box_textview"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_green_bookmark_star"
                android:text="@string/lab_objectivos2"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:background="@drawable/box_textview"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_green_bookmark_star"
                android:text="@string/lab_objectivos3"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:background="@drawable/box_textview"
                android:padding="5dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_green_bookmark_star"
                android:text="@string/lab_objectivos4"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:background="@drawable/box_textview"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_green_bookmark_star"
                android:text="@string/lab_objectivos5"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:background="@drawable/box_textview"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>