<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/img_oracion"
        android:gravity="center">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/id_title_horacion"
        android:text="@string/lab_title_horacion"
        android:textSize="22dp"
        android:textColor="#fff" />
        <TextView
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/id_ciudad"
            android:text="@string/lab_ciudad"
            android:textSize="22dp"
            android:textColor="#fff" />
    </LinearLayout>
    <TableLayout
        android:id="@+id/id_paper"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:stretchColumns="1"
        android:paddingTop="40dp"
        android:paddingBottom="50dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:background="@drawable/img_paper">
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <Button
                android:id="@+id/id_fecha_antes"
                android:layout_width="20dip"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:background="@drawable/ic_left"
                android:visibility="invisible"/>
            <Button
                android:id="@+id/id_fecha_desp"
                android:layout_width="20dip"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@drawable/ic_right"/>
            <TextView
                android:id="@+id/txt_fecha"
                android:text="@string/lab_error"
                android:textSize="18dp"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/id_fecha_antes"
                android:layout_toLeftOf="@+id/id_fecha_desp"
                android:textStyle="bold"/>
        </RelativeLayout>
        <TableRow
            android:paddingTop="2dp"
            android:paddingBottom="2dp">
            <TextView
                android:layout_column="1"/>
            <TextView
                android:text="@string/lab_salat"
                android:gravity="center"
                android:textSize="16dp"/>
            <TextView
                android:text="@string/lab_ikama"
                android:gravity="center"
                android:textSize="16dp"
                android:layout_marginLeft="5dp"/>
        </TableRow>
        <TableRow
            android:id="@+id/id_backrowfajr"
            android:paddingTop="2dp"
            android:paddingBottom="2dp">
            <TextView
                android:id="@+id/lbl_fajr"
                android:text="@string/lab_fajr"
                android:layout_column="1"
                android:textSize="19dp"/>
            <TextView
                android:id="@+id/txt_fajr"
                android:text="@string/lab_error"
                android:gravity="center"
                android:textSize="18dp"/>
            <TextView
                android:id="@+id/txt_fajr_ikama"
                android:text="@string/lab_error"
                android:gravity="center"
                android:textSize="17dp"
                android:layout_marginLeft="5dp"/>
        </TableRow>

        <TableRow
            android:paddingTop="2dp"
            android:paddingBottom="2dp">
            <TextView
                android:id="@+id/lbl_sun"
                android:text="@string/lab_sun"
                android:layout_column="1"
                android:textSize="19dp"/>
            <TextView
                android:id="@+id/txt_sun"
                android:text="@string/lab_error"
                android:gravity="center"
                android:textSize="18dp"/>
        </TableRow>
        <TableRow
            android:id="@+id/id_backrowdhohr"
            android:paddingTop="2dp"
            android:paddingBottom="2dp">
            <TextView
                android:id="@+id/lbl_dhohr"
                android:text="@string/lab_dhohr"
                android:layout_column="1"
                android:textSize="19dp"/>
            <TextView
                android:id="@+id/txt_dhohr"
                android:text="@string/lab_error"
                android:gravity="center"
                android:textSize="18dp"/>
            <TextView
                android:id="@+id/txt_dhohr_ikama"
                android:text="@string/lab_error"
                android:gravity="center"
                android:textSize="17dp"
                android:layout_marginLeft="5dp"/>
        </TableRow>

        <TableRow
            android:id="@+id/id_backrowasr"
            android:paddingTop="2dp"
            android:paddingBottom="2dp">
            <TextView
                android:id="@+id/lbl_asr"
                android:text="@string/lab_asr"
                android:layout_column="1"
                android:textSize="19dp"/>
            <TextView
                android:id="@+id/txt_asr"
                android:text="@string/lab_error"
                android:gravity="center"
                android:textSize="18dp"/>
            <TextView
                android:id="@+id/txt_asr_ikama"
                android:text="@string/lab_error"
                android:gravity="center"
                android:textSize="17dp"
                android:layout_marginLeft="5dp"/>
        </TableRow>

        <TableRow
            android:id="@+id/id_backrowmaghreb"
            android:paddingTop="2dp"
            android:paddingBottom="2dp">
            <TextView
                android:id="@+id/lbl_maghreb"
                android:text="@string/lab_maghreb"
                android:layout_column="1"
                android:textSize="19dp"/>
            <TextView
                android:id="@+id/txt_maghreb"
                android:text="@string/lab_error"
                android:gravity="center"
                android:textSize="18dp"/>
            <TextView
                android:id="@+id/txt_maghreb_ikama"
                android:text="@string/lab_error"
                android:gravity="center"
                android:textSize="17dp"
                android:layout_marginLeft="5dp"/>
        </TableRow>
        <TableRow
            android:id="@+id/id_backrowisha"
            android:paddingTop="2dp">
            <TextView
                android:id="@+id/lbl_isha"
                android:text="@string/lab_isha"
                android:layout_column="1"
                android:textSize="19dp"/>
            <TextView
                android:id="@+id/txt_isha"
                android:text="@string/lab_error"
                android:gravity="center"
                android:textSize="18dp"/>
            <TextView
                android:id="@+id/txt_isha_ikama"
                android:text="@string/lab_error"
                android:gravity="center"
                android:textSize="17dp"
                android:layout_marginLeft="5dp"/>
        </TableRow>
    </TableLayout>
</LinearLayout>