<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="5dp">
    <ImageView
        android:id="@+id/id_header_home"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:src="@drawable/img_inicio"
        android:background="@drawable/img_border_image"
        android:layout_alignParentTop="true"/>
    <LinearLayout
        android:layout_weight="1"
        android:id="@+id/bottom_social"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:gravity="center">
        <TextView
            android:background="@drawable/share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickShare"
            android:clickable="true" />
        <TextView
            android:background="@drawable/fb"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:onClick="onClickFb"
            android:clickable="true"
            android:layout_marginLeft="10dp"/>
        <TextView
            android:background="@drawable/web"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:onClick="onClickWeb"
            android:clickable="true"
            android:layout_marginLeft="10dp"/>
        <TextView
            android:background="@drawable/twitter"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:onClick="onClickTwitter"
            android:clickable="true"
            android:layout_marginLeft="10dp"/>
        <TextView
            android:background="@drawable/youtube"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:onClick="onClickYoutube"
            android:clickable="true"
            android:layout_marginLeft="10dp"/>
        </LinearLayout>
    <!--<app.ccivigo.org.RayMenu
        android:id="@+id/ray_menu"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"/>-->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_above="@id/bottom_social"
        android:layout_below="@id/id_header_home"
        android:gravity="center">
        <Button
            style="@style/ButtonText"
            android:background="@drawable/btn_green"
            android:text="@string/lab_btnccivigo"
            android:onClick="onClickCcivigo" />
        <Button
            style="@style/ButtonText"
            android:background="@drawable/btn_green"
            android:onClick="onClickObjectif"
            android:text="@string/lab_btnobjectif" />

        <Button
            style="@style/ButtonText"
            android:background="@drawable/btn_green"
            android:onClick="onClickOracion"
            android:text="@string/lab_btnoracion"/>

        <Button
            style="@style/ButtonText"
            android:background="@drawable/btn_green"
            android:onClick="onClickContact"
            android:text="@string/lab_btncontact"/>
    </LinearLayout>

</RelativeLayout>